# dsanotes

./: README.md
(1-2)/: Arrays.txt  Hashing.txt  Strings.txt
3-4/: LRU Cache & Sliding Window.txt  Linked Lists.txt  Stack.txt
5-6/: Trees.txt
AISECTION/: Data Structures & Algorithms Roadmap.md  aiengineer.roadmap.md  model-creation-roadmap.md  roadmap.md  run ai model.md
Algorithms/: FractionalKnapSack.java
BLOCKCHAIN/: roadmap.md
COMMONS/: App Communication Tools.md  webrtc_angular_19_socketio_sample.md
Design/: note.md
GO/: cat-apps.md  roadmap.md
Jarvis/: doc.txt  index.html
NEXTJS/: dependencies.md  roadmap.md
Notes/: DOCKERIZE.txt  DSA Roadmap.docx  Deploy a Node js - SSL-ACME CHALLENGE.docx  Java   roadmap-qwen.docx  Java Roadmap.docx  NGINX- config- multple apps.docx  Preparing for a FAANG -qwen.docx  To deploy a Spring Boot application on an Ubuntu server with Nginx as a reverse proxy.docx  customcdn.txt  digitalmarketing.txt  powerbi.txt  traefic.txt
PROBLEMS/: roadmap.md
PYTHON/: roadmap.md
RUST/: ROADMAP.MD
RUST/gym_management_system/backend-pgsql-sqlx/: Cargo.toml
RUST/gym_management_system/backend-pgsql-sqlx/src/models/: plan.rs  trainer.rs
RUST/gym_management_system/backend-pgsql-sqlx/src/routes/: member_routes.rs
RUST/gym_management_system/backend-pgsql-sqlx/src/services/: member_service.rs
Streams/: leetcodespt.md
TECH STACKS/: OLA.md
angular/: roadmap.txt
cloud/: map.md
devops/: laravel-deployment-nginx-ubuntu-certbot-sqlite.md  multirunscript.json  setup.md
flutter/: arch1.md
iot-project/: package.json  (+2 more)
(+543 files in other folders)
